--- a/sample.env
+++ b/sample.env
@@ -1,10 +1,18 @@
+# Document Intelligence settings
 FR_ENDPOINT = ""
 FR_KEY = ""
+# AI Search settings
 SEARCH_ENDPOINT = ""
 SEARCH_KEY = ""
-SEARCH_INDEX_NAME = ""
+SEARCH_INDEX_NAME = "test-index"
+# OpenAI settings
 AZURE_OPENAI_API_KEY = ""
 AZURE_OPENAI_ENDPOINT = ""
-AZURE_OPENAI_CHAT_MODEL = "gpt-4o-1120"
+AZURE_OPENAI_CHAT_MODEL = "gpt-4o"
 AZURE_OPENAI_EMBEDDING_MODEL = "text-embedding-3-large"
 AZURE_OPENAI_API_VERSION = "2024-12-01-preview"
+# Evaluation settings for Groundedness Pro evaluator
+AZURE_SUBSCRIPTION_ID = ""
+AZURE_RESOURCE_GROUP = ""
+AZURE_PROJECT_NAME = ""
+TENANT_ID = ""
