added variables for ai search indexer

--- a/sample.env
+++ b/sample.env
@@ -10,9 +10,15 @@ AZURE_OPENAI_API_KEY = ""
 AZURE_OPENAI_ENDPOINT = ""
 AZURE_OPENAI_CHAT_MODEL = "gpt-4o"
 AZURE_OPENAI_EMBEDDING_MODEL = "text-embedding-3-large"
-AZURE_OPENAI_API_VERSION = "2024-12-01-preview"
+AZURE_OPENAI_API_VERSION = "2025-02-01-preview"
 # Evaluation settings for Groundedness Pro evaluator
 AZURE_SUBSCRIPTION_ID = ""
 AZURE_RESOURCE_GROUP = ""
 AZURE_PROJECT_NAME = ""
 TENANT_ID = ""
+# AI Services settings for AI Search Indexer
+AZURE_AI_MULTISERVICE_ACCOUNT = ""
+AZURE_AI_MULTISERVICE_KEY = ""
+# Storage Account Settings for AI Search Indexer
+STORAGE_CONN_STR = ""
+CONTAINER_NAME = ""
