env variables added for indexer

--- a/sample.env
+++ b/sample.env
@@ -4,7 +4,10 @@ FR_KEY = ""
 # AI Search settings
 SEARCH_ENDPOINT = ""
 SEARCH_KEY = ""
-SEARCH_INDEX_NAME = "test-index"
+SEARCH_INDEX_NAME = ""
+SEARCH_INDEXER_NAME = ""
+SEARCH_DATA_SOURCE_NAME = ""
+SEARCH_SKILLSET_NAME = ""
 # OpenAI settings
 AZURE_OPENAI_API_KEY = ""
 AZURE_OPENAI_ENDPOINT = ""
